add get reservvation by id endpoint; nice to have
