# src/main/resources/openapi.yaml
@@ -152,6 +152,36 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Error'
+    get:
+      summary: get a campsite oder
+      operationId: getOrder
+      parameters:
+        - name: orderId
+          in: path
+          required: true
+          description: The id of the resevation for the campsite
+          schema:
+            type: string
+      tags:
+        - campsites
+      security:
+        - campsite_auth:
+            - 'read:campsite'
+      responses:
+        '200':
+          description: Expected response to a valid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Reservation'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Error'
 components:
   securitySchemes:
     campsite_auth:
